<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_push"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:context="com.waqkz.cloudmessagingpushexample.SignInActivity">

    <EditText
        android:id="@+id/email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#7986CB"
            android:textColor="#FFFFFF"
            android:text="@string/sign_in"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp">

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16sp"
            android:textColor="#FF5722"
            android:gravity="right"
            android:text="@string/not_sign_first"/>

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="16sp"
            android:textColor="#7986CB"
            android:textStyle="bold"
            android:paddingLeft="8dp"
            android:gravity="left"
            android:text="@string/not_sign_second"/>

    </LinearLayout>

</LinearLayout>
